# DatingBot

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
backend/: .env.example  .pre-commit-config.yaml  main.py  pyproject.toml
backend/src/: main.py
backend/src/generic/auth/infrastructure/database/: __init__.py  db_connection.py  redis.py
backend/src/generic/auth/infrastructure/database/models/: __init__.py  models.py  photo.py  profile.py  role.py  user.py
backend/src/generic/auth/infrastructure/database/repositories/: __init__.py  auth.py  photo.py  profile.py  role.py  user.py
backend/src/generic/auth/infrastructure/services/security/: __init__.py  (+2 more)
backend/src/generic/auth/presentation/: __init__.py
backend/src/generic/auth/presentation/api/: __init__.py  exceptions.py
backend/src/infra/logging/: types.py
backend/src/module/auth/presentation/: __init__.py
backend/src/module/auth/presentation/rest/: __init__.py
backend/src/module/billing/infra/yoomoney/: authorization.py  request.py  wallet.py
backend/src/module/ugc/infra/: nude_net_predictor.py
backend/src/modules/ugc/infra/: nude_net_predictor.py
tgbot/: .env.example  Dockerfile  babel.cfg  bot.conf  bot.py  config.py  proxy_pool.py  pyproject.toml  ruff.toml  run_polling.py  run_webhook.py  types.py
tgbot/infra/log/: __init__.py  setup.py  types.py
tgbot/infra/logging/: processors.py
tgbot/infra/webhook/: app.py  router.py
tgbot/locales/de/LC_MESSAGES/: dating.po
tgbot/locales/en/LC_MESSAGES/: dating.po
tgbot/locales/in/LC_MESSAGES/: dating.po
tgbot/locales/ru/LC_MESSAGES/: dating.po
tgbot/presentation/filters/: __init__.py  admin_filter.py
tgbot/presentation/handlers/v1/users/: change_datas.py  event.py  filters.py  registration.py
tgbot/presentation/keyboards/v1/admin/: main_menu.py
tgbot/presentation/keyboards/v1/admin/inline/: mailing.py  payments.py  reply_menu.py  setting.py
tgbot/presentation/keyboards/v1/default/: admin_default.py  get_contact_default.py  get_location_default.py  get_photo.py
tgbot/presentation/keyboards/v1/inline/: admin_inline.py  back_inline.py  calendar.py  cancel_inline.py  change_data_profile_inline.py  filters_inline.py  main_menu_inline.py  menu_profile_inline.py  poster_inline.py  questionnaires_inline.py  registration_inline.py  settings_menu.py  support_inline.py
tgbot/presentation/middlewares/: __init__.py  exceptions.py  tech_support.py  throttling.py
tgbot/presentation/services/: __init__.py
tgbot/services/: set_bot_commands.py
tgbot/src/: bot.py  bot_types.py  config.py  proxy_pool.py  run_polling.py  run_webhook.py
tgbot/src/infra/logging/: processors.py  setup.py  types.py
tgbot/src/infra/webhook/: app.py  router.py
tgbot/src/presentation/filters/: __init__.py  admin_filter.py  filters_chat.py
tgbot/src/presentation/handlers/v1/errors/: error_handler.py
tgbot/src/presentation/handlers/v1/users/: change_datas.py  event.py  filters.py  registration.py
tgbot/src/presentation/handlers/v2/: __init__.py  echo.py
tgbot/src/presentation/keyboards/v1/default/: admin_default.py  get_contact_default.py  get_location_default.py  get_photo.py
tgbot/src/presentation/keyboards/v1/inline/: admin_inline.py  back_inline.py  calendar.py  cancel_inline.py  change_data_profile_inline.py  filters_inline.py  guide_inline.py  language_inline.py  main_menu_inline.py  menu_profile_inline.py  necessary_links_inline.py  payments_inline.py  poster_inline.py  questionnaires_inline.py  registration_inline.py  settings_menu.py  support_inline.py
tgbot/src/presentation/middlewares/: __init__.py  check_maintenance.py  exceptions.py  link_check.py  logging_middleware.py  scheduler_ware.py  tech_support.py  throttling.py
tgbot/src/presentation/services/: broadcaster.py  set_bot_commands.py
tgbot/test/e2e/: conftest.py
(+37 files in other folders)
