[project]
name = "tgbot"
version = "1.0.0"
description = "Dating Telegram Bot with open source code"
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = "Attribution-NonCommercial 3.0 Unported"
authors = [
    { name = "David Dzhalaev", email = "72649244+DavidRomanovizc@users.noreply.github.com" }
]
dependencies = [
    "fastapi==0.136.0",
    "aiogram==3.27.0",
    "environs==15.0.1",
    "asyncpg==0.31.0",
    "better-profanity>=0.7.0,<0.8.0",
    "aiohttp==3.13.5",
    "async-lru==2.0.4",
    "apscheduler==3.10.4",
    "nudenet==3.0.8",
    "yarl==1.23.0",
    "aiofiles==23.2.1",
    "pydantic==2.12.5",
    "redis==5.0.1",
    "structlog==25.5.0",
    "testresources>=2.0.1,<3.0.0",
    "orjson==3.11.8",
    "aiohttp-socks>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "telethon==1.43.1",
    "pre-commit==3.6.0",
    "mypy>=1.8.0,<2.0.0",
    "deptry>=0.12.0,<0.13.0",
    "ruff>=0.14.0,<0.15.0",
    "pip-audit>=2.7.0,<3.0.0",
]

[tool.deptry]
ignore = ["DEP002"]

[tool.uv]
package = false
